--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:OlymPOS"
-    BackgroundColor="Black"
+    xmlns:views="clr-namespace:OlymPOS.Views"
     Shell.FlyoutBehavior="Disabled"
     Shell.BackgroundColor="SteelBlue">
     <!-- Define ShellItem for each page or tab -->
@@ -15,7 +15,9 @@
     <!-- Define ShellItem for the TablePage -->
     <ShellItem Title="Table Page" FlyoutIcon="table_page_icon.png">
         <ShellContent ContentTemplate="{DataTemplate local:TablePage}" />
-
     </ShellItem>
-
+    <ShellItem Title="Combined Page" FlyoutIcon="combined_page_icon.png">
+        <ShellContent ContentTemplate="{DataTemplate views:CombinedPage}" />
+    </ShellItem>
 </Shell>
+
